--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <!-- Scripts -->
-
+    <!-- <script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>  Haven't used this for generating ticket IDs -->
     <script src="./app.js"></script>
   </body>
 </html>
